<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:id="@+id/username"
        android:autofillHints="username"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/name"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:id="@+id/name"
        android:autofillHints="name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/Email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:autofillHints="emailAddress" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:ems="15" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/sign_up"
        android:padding="10dp"
        android:id="@+id/signup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:layout_marginTop="15dp"
        android:id="@+id/login_user"/>


</LinearLayout>