<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_centerInParent="true"
        android:id="@+id/icon_image"
        android:contentDescription="@string/icon"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:layout_margin="20dp"
            android:layout_marginBottom="50dp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>
